Issue 11 Front page News and about ELMCIP not aligned correctly
* The two sections correctly position on 50% split and grid.
* New functionality, adding .transparent class to panes make them loose
all forced padding. Typical use case will be panes with no background
color (transparent).
* Page content wrapper used a 10px top/bottom margin. Since our gutter
size is 20px should this prob. also be reflected there.

--- a/themes/elmcip/css/layout-fixed.css
+++ b/themes/elmcip/css/layout-fixed.css
@@ -112,8 +112,6 @@ body {
   position: relative;
 }
 
-#main {}
-
 /*
  * Content
  */
@@ -145,26 +143,34 @@ body {
 }
 
 #content .section {
-  margin: 10px;
+  margin: 20px 10px;
 }
-
 
 /**
  * Front Page Panel styles.
  */
 
+.front .inside,
+.front .transparent .pane-content,
 .front .view-content {
   padding: 0;
 }
 
-#front-page-pane-about {
-  width: 400px;
+.front .pane-content {
+  padding: 10px;
 }
 
-#front-page-pane-news {}
+.panels-flexible-region-7-news,
+.panels-flexible-region-7-about {
+  width: 460px;
+}
 
-#front-page-pane-news div.pane-content {
-  padding-top: 1em;
+.panels-flexible-region-7-about {
+  margin: 0 10px 0 0;
+}
+
+.panels-flexible-region-7-news {
+  margin: 0 0 0 10px;
 }
 
 /* Terrible hack. Remove this when panel layout have changed for the better. */
@@ -197,6 +203,11 @@ body {
   min-height: 440px;
 }
 
+.panels-flexible-row-7-4 .pane-title {
+  margin: 0;
+  padding: 0.714em 1em;
+}
+
 .panels-flexible-row-7-4 .panels-flexible-region-first {
   margin: 0 10px 0 0;
 }
@@ -207,10 +218,6 @@ body {
 
 .panels-flexible-row-7-4 .panels-flexible-region-inside {
   padding: 0;
-}
-
-.front .pane-content {
-  padding: 10px;
 }
 
 #front-page-pane-anthology1 {
@@ -250,7 +257,8 @@ body {
   width: 936px;
 }
 
-table.views-table { /* The table layout of the knowledgebase frontpage, generated by views */
+/* The table layout of the knowledgebase frontpage, generated by views */
+table.views-table {
   border: 1px solid #000;
   border-collapse: inherit;
   width: 100%;
