--- a/themes/elmcip/css/panels.css
+++ b/themes/elmcip/css/panels.css
@@ -5,8 +5,6 @@
  */
 
 .front h2 {
-  color: #333333;
-  font-size: 1.4em;
   font-weight: normal;
 }
 
@@ -17,8 +15,6 @@
 .panels-flexible-row-7-4 .pane-title {
   background-color: #333;
   color: #fff;
-  margin: 0;
-  padding: 0.714em 1em;
   text-align: center;
 }
 
